style: fix z-index of dropdown and checkbox

--- a/src/components/checkBox/checkBox.module.scss
+++ b/src/components/checkBox/checkBox.module.scss
@@ -26,6 +26,7 @@
     background-color: transparent;
     transition: background-color 0.2s;
     position: relative;
+    z-index: -1;
   }
 
   input:checked ~ .checkboxIcon {
