--- a/src/components/dropDown/dropDown.module.scss
+++ b/src/components/dropDown/dropDown.module.scss
@@ -10,6 +10,7 @@
   top: 3.25rem;
   left: 0;
   right: 0;
+  z-index: 99;
 
   .list {
     width: 100%;
